--- a/index.html
+++ b/index.html
@@ -1,16 +1,70 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+    <meta name="color-scheme" content="light dark" />
+    <meta name="theme-color" content="#16a34a" />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="/icon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mantine7 supabase template</title>
-</head>
+    <title>PerfilSolo</title>
+    <meta
+      name="description"
+      content="PerfilSolo — cadastro e interpretação de análises de solo, recomendações e relatórios."
+    />
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
+    <!-- Favicon / PWA icons (servidos a partir de /public) -->
+    <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/icons/favicon-96x96.png"
+    />
+    <link rel="shortcut icon" href="/icons/favicon.ico" />
 
+    <!-- iOS -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/icons/apple-touch-icon.png"
+    />
+
+    <!-- Android/Chrome -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/icons/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="/icons/android-chrome-512x512.png"
+    />
+
+    <!-- Manifest (PWA) -->
+    <link
+      rel="manifest"
+      href="/site.webmanifest"
+      crossorigin="use-credentials"
+    />
+
+    <!-- Open Graph (opcional, bom para compartilhamento) -->
+    <meta property="og:title" content="PerfilSolo" />
+    <meta
+      property="og:description"
+      content="Cadastro e interpretação de análises de solo."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/icons/android-chrome-512x512.png" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
